# hratc2017_entry_rcmakers

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  navfile.csv  package.xml
data/: base_local_planner_params.yaml  costmap_common_params.yaml  nearingtraining.txt  test1.txt  test2.txt  training.txt
examples/py/: simple_control.old.py  simple_control.py
launch/: hratc2017_rcmakers.launch  hratc2017_rcmakers.launch~  move_base.launch
scripts/: detector.py  detector.py.orig  logger.py  nav1.py  nav_old.py  navigator.p  navigator.py  navigator_old.py  navtest.py
