<?xml version="1.0"?>
<package>
  <name>hratc2017_entry_rcmakers</name>
  <version>0.0.1</version>
  <description>The HRATC 2017 entry by team RCMakers.</description>

  <maintainer email="ali@cataltepe.com">Ali Cataltepe</maintainer>
  <maintainer email="ege1358@gmail.com">Ege Caglar</maintainer>
  <maintainer email="tan@gemdata.com.tr">Tan Gemicioglu</maintainer>

  <license>BSD</license>
<!--  <url type="website">http://www.inf.ufrgs.br/hratc2017/HRATC2017/Welcome.html</url>
  <author email="goncabrita@gmail.com">Gonçalo Cabrita</author>
  <author email="rqmaffei@gmail.com">Renan Maffei</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>metal_detector_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>openslam_gmapping</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>rotate_recovery</build_depend>
  <build_depend>clear_costmap_recovery</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>move_base</build_depend>


  <run_depend>metal_detector_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>husky_navigation</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>openslam_gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>rotate_recovery</run_depend>
  <run_depend>clear_costmap_recovery</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>python-numpy</run_depend>

<!--  <run_depend>hratc2017_framework</run_depend>
  <run_depend>hratc2017_robot</run_depend> -->
  
</package>
